; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/time/extr_time.c_humantime.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/time/extr_time.c_humantime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"\09\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"%ldd\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"%ldh\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"%ldm\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"%ld%c%02lds\00", align 1
@decimal_point = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i64)* @humantime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @humantime(i32* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %10 = load i64, i64* %5, align 8
  %11 = sdiv i64 %10, 86400
  store i64 %11, i64* %7, align 8
  %12 = load i64, i64* %5, align 8
  %13 = srem i64 %12, 86400
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = sdiv i64 %14, 3600
  store i64 %15, i64* %8, align 8
  %16 = load i64, i64* %5, align 8
  %17 = srem i64 %16, 3600
  store i64 %17, i64* %5, align 8
  %18 = load i64, i64* %5, align 8
  %19 = sdiv i64 %18, 60
  store i64 %19, i64* %9, align 8
  %20 = load i64, i64* %5, align 8
  %21 = srem i64 %20, 60
  store i64 %21, i64* %5, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 (i32*, i8*, ...) @fprintf(i32* %22, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %24 = load i64, i64* %7, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %3
  %27 = load i32*, i32** %4, align 8
  %28 = load i64, i64* %7, align 8
  %29 = call i32 (i32*, i8*, ...) @fprintf(i32* %27, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i64 %28)
  br label %30

30:                                               ; preds = %26, %3
  %31 = load i64, i64* %8, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %30
  %34 = load i32*, i32** %4, align 8
  %35 = load i64, i64* %8, align 8
  %36 = call i32 (i32*, i8*, ...) @fprintf(i32* %34, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i64 %35)
  br label %37

37:                                               ; preds = %33, %30
  %38 = load i64, i64* %9, align 8
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %44

40:                                               ; preds = %37
  %41 = load i32*, i32** %4, align 8
  %42 = load i64, i64* %9, align 8
  %43 = call i32 (i32*, i8*, ...) @fprintf(i32* %41, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0), i64 %42)
  br label %44

44:                                               ; preds = %40, %37
  %45 = load i32*, i32** %4, align 8
  %46 = load i64, i64* %5, align 8
  %47 = load i32, i32* @decimal_point, align 4
  %48 = load i64, i64* %6, align 8
  %49 = call i32 (i32*, i8*, ...) @fprintf(i32* %45, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0), i64 %46, i32 %47, i64 %48)
  ret void
}

declare dso_local i32 @fprintf(i32*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
